<?xml version="1.0"?>
<package format="2">
  <name>panda_ros</name>
  <version>0.1.0</version>
  <description>Panda classed to communicate with the controller in python and tranformation tools of the trajectories</description>

  <maintainer email="g.franzese@tudelft.nl">Giovanni Franzese</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>






